k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: stijaktech/backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: cdn
          volumeMounts:
            - mountPath: /public
              name: public
      volumes:
        - name: public
          hostPath:
            path: /c/home/marko_stijak/application/public
      restartPolicy: Always
  selector:
    matchLabels:
      app: backend

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  type: NodePort
  ports:
    - name: backend-http
      port: 8080
      protocol: TCP
      targetPort: 8080
