k8s/cdn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdn
  labels:
    app: cdn
spec:
  replicas: 1
  template:
    metadata:
      name: cdn
      labels:
        app: cdn
    spec:
      containers:
        - name: cdn
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: cdn
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: public
      volumes:
        - name: public
          hostPath:
            path: /c/home/marko_stijak/application/public
      restartPolicy: Always
  selector:
    matchLabels:
      app: cdn

---
apiVersion: v1
kind: Service
metadata:
  name: cdn
spec:
  selector:
    app: cdn
  type: NodePort
  ports:
    - name: cdn-http
      port: 8080
      protocol: TCP
      targetPort: 80
