k8s/elk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elk
  labels:
    app: elk
spec:
  replicas: 1
  template:
    metadata:
      name: elk
      labels:
        app: elk
    spec:
      containers:
        - name: elk
          image: sebp/elk:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5061
              name: kibana
            - containerPort: 9200
              name: elastic
            - containerPort: 5044
              name: logstash
      restartPolicy: Always
  selector:
    matchLabels:
      app: elk

---
apiVersion: v1
kind: Service
metadata:
  name: elk
spec:
  selector:
    app: elk
  ports:
    - name: kibana
      port: 5601
      targetPort: 5601
    - name: elastic
      port: 9200
      targetPort: 9200
    - name: logstash
      port: 5044
      targetPort: 5044
