k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: eu.gcr.io/nifty-analyst-317516/stijaktech/frontend:latest
          imagePullPolicy: Always
          ports:
            - name: frontend
              containerPort: 80
      restartPolicy: Always
  selector:
    matchLabels:
      app: frontend

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 80
