k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtual-host-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-headers: '*'
    nginx.ingress.kubernetes.io/cors-allow-methods: '*'
    nginx.ingress.kubernetes.io/cors-allow-origin: 'https://www.devnews.xyz'
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'devnews.xyz' ) {
        rewrite ^ https://www.$host$request_uri permanent;
      }
spec:
  tls:
    - secretName: devnews-xyz-tls
      hosts:
        - 'devnews.xyz'
        - 'www.devnews.xyz'
        - 'api.devnews.xyz'
        - 'cdn.devnews.xyz'
        - 'kibana.devnews.xyz'
  rules:
    - host: 'devnews.xyz'
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 8080
            path: '/'
            pathType: Prefix
    - host: 'www.devnews.xyz'
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 8080
            path: '/'
            pathType: Prefix
    - host: 'api.devnews.xyz'
      http:
        paths:
          - backend:
              service:
                name: backend
                port:
                  number: 8080
            path: '/'
            pathType: Prefix
    - host: 'cdn.devnews.xyz'
      http:
        paths:
          - backend:
              service:
                name: cdn
                port:
                  number: 8080
            path: '/'
            pathType: Prefix
    - host: 'kibana.devnews.xyz'
      http:
        paths:
          - backend:
              service:
                name: elk
                port:
                  number: 8080
            path: '/'
            pathType: Prefix
